tests/fields_derives.stderr
error[E0599]: no method named `clone` found for enum `ExampleStructField` in the current scope
  --> tests/fields_derives.rs:17:19
   |
 6 | #[derive(Fields)]
   |          ------ method `clone` not found for this enum
...
17 |     let _ = field.clone();
   |                   ^^^^^ method not found in `ExampleStructField`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`
